# Cijak

./: .gitignore  README.md  hatch_build.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
cijak/: _native.c  cijak.py
src/cijak/: _native.c
